--- a/data/email.html
+++ b/data/email.html
@@ -1,3 +1,3 @@
 <h2>Hailgun HTML Email</h2>
 
-<p>This is a HTML email that can be send with hailgun.</p>
+<p>This is a HTML email that can be sent with hailgun (via mailgun).</p>
